--- a/GoloSwift/ru.lproj/Localizable.strings
+++ b/GoloSwift/ru.lproj/Localizable.strings
@@ -14,3 +14,4 @@
 "Response Unsuccessful"                     =   "Ошибка обработки ответа сервера";
 "JSON Parsing Failure"                      =   "Ошибка анализа JSON структуры";
 "JSON Conversion Failure"                   =   "Ошибка конвертации JSON структуры в модель";
+"Dynamic Global Properties Error"           =   "Ошибка запроса\nдинамических глобальных свойств";
