Refactoring func executeGET(byMethodAPIType:): add onResult(0 & onError() completion handlers.

--- a/GoloSwift/Resources/en.lproj/Localizable.strings
+++ b/GoloSwift/Resources/en.lproj/Localizable.strings
@@ -17,3 +17,4 @@
 "JSON Parsing Failure"                      =   "JSON Parsing Failure";
 "JSON Conversion Failure"                   =   "JSON Conversion Failure";
 "Dynamic Global Properties Error"           =   "Request failed\ndynamic global properties";
+"Result not found"                          =   "Result not found";
